# ClientManagerProject

./: CMakeLists.txt  ClientManagerProject.sln  main.cpp
ClientManagerProject/: ClientManager.hpp  ClientManagerProject.cpp  ClientManagerProject.vcxproj  ClientManagerProject.vcxproj.filters
db/: init.sql
